--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "google-generativeai>=0.8.5",
-    "httpx>=0.28.1",
+    "requests>=2.32.0",
     "uvicorn[standard]>=0.35.0",
 ]
